# poetry-fastapi-template

./: README.md  pyproject.toml
poetry_fastapi_template/: __init__.py
