[tool.poetry]
name = "poetry_fastapi_template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"

[tool.poetry.scripts]
dev = "poetry_fastapi_template:dev"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.30.6"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
